# fhir-tw-validator

./: README.md  pyproject.toml
docs/: index.html  rules.html
examples/: sample_bundle.json
fhir_tw_validator/: __init__.py  base.py  bundle.py  references.py  report.py  structural.py  taiwan.py  terminology.py
scripts/: validate_file.py
